# Automation

./: .gitattributes  .gitignore  .gitlab-ci.yml  README.md  automation_set_up.py  pyproject.toml  pytest.ini  requirements.txt
config/: .env  config.ini
devops_scripts/: argocd-create.sh  argocd-delete.sh  argocd-project-check.sh  argocd-service-check.sh  argocd.sh  elastic.sh  mongo-cs.js  mongo-plt.js  postgres-temporary.sql  postgres.sh  rabbitmq.sh  redis.sh
pylib/client_side/: activity.py  config.py  fund.py  game.py  proxy.py  test.py  user.py  validation.py  wallet.py  webApiBase.py
pylib/clinet_side/: Variable.py  config.py  game.py  user.py  validation.py  wallet.py
pylib/contorl/: control.py
pylib/platform/: account.py  accountAdmin.py  accountAuthority.py  accountDept.py  accountRole.py  activity.py  config.py  fund.py  game.py  platApiBase.py  platform.py  proxy.py  thirdPartyManage.py  user.py  userManage.py  userVip.py  wallet.py
resources/: test_account.json5  test_config.json5  test_file_upload.json5  test_game.json5  test_proxy.json  test_proxy.json5  test_proxy_channel.json  test_third_party_manage.json5  test_universal.json5  test_user.json5  test_wallet.json5  testing.json
testcase/: conftest.py  test_game.py  test_proxy.py  test_pyTest.py
tool/: json_schema_builder.py
utils/: APIControler.py  APIController.py  api_utils.py  cipher_utils.py  dataUtils.py  data_base_handler.py  data_utils.py  database_utils.py  generate_utils.py  generator.py  postgres_util.py  postgres_utils.py  redis_utils.py  validate_json.py  xxl_job_utils.py
(+88 files in other folders)
